# py_eto

./: LICENSE  README.md  pyproject.toml
examples/: eto_playground.ipynb
examples/data/: sample_weather.xlsx  ~$sample_weather.xlsx
src/: __init__.py
src/py_eto/: __init__.py  hargreaves.py  helpers.py
src/py_eto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
