[project]
name = "py-eto"
version = "0.1.0"
description = "A Python library for Reference Evapotranspiration (ETo) calculation"
authors = [
    {name = "Rui Gao", email = "rui.ray.gao@gmail.com"}
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "openpyxl>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"